--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,4 @@
   <p>Se tiene la clases row-no-padding elimina los padding de los costados a las columnas automaticamente </p>
 </div>
 <!-- <ngx-utilitario-chat-detail-add [disabled]="0"></ngx-utilitario-chat-detail-add> -->
+<!-- <ngx-utilitario-chat-detail></ngx-utilitario-chat-detail> -->
