--- a/src/app/chat/chat/chat-detail-add/chat-detail-add.component.html
+++ b/src/app/chat/chat/chat-detail-add/chat-detail-add.component.html
@@ -6,8 +6,8 @@
           [placeholder]="placeholder">
       </form>
     </div>
-    <div class="col-1">
-      <div class="ngx-util-btns-acciones">
+    <div class="col-1 no-padding">
+      <div class="ngx-util-btns-actions">
         <input class="ngx-util-input-file" type="file" accept="image/*" #file (change)="sendImage($event)">
         <button id="btn_sendImage" type="button" class="col-6 btn ngx-util-btn-icon ngx-util-btn-gray" (click)="file.click()"><i
             class="fa fa-camera" aria-hidden="true"></i></button>
