--- a/src/app/chat/chat/chat-detail/chat-detail.component.html
+++ b/src/app/chat/chat/chat-detail/chat-detail.component.html
@@ -1,36 +1,36 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-2 img-fluid">
-      <img class="img-fluid rounded-circle img-height-3-7" alt="conversacion.nombre" src="{{conversacion.img}}" />
+      <img class="img-fluid rounded-circle img-height-3-7" alt="chatDetail.name" src="{{imageValidate(chatDetail.img)}}" />
     </div>
     <div class="col-9">
       <div class="row">
         <div class="col-12">
-          {{conversacion.nombre}}
+          {{chatDetail.name}}
         </div>
       </div>
       <div class="row">
-        <div class="col-12">{{conversacion.estado}}</div>
+        <div class="col-12">{{chatDetail.state}}</div>
       </div>
     </div>
-    <div class="col-1 ngx-utilitario-btns-acciones">
-      <button type="button" class="col-6 btn ngx-utilitario-btn-icon ngx-utilitario-btn-gray"
-        (click)="eliminarConversacion()">
+    <div class="col-1 ngx-util-btns-acciones">
+      <button type="button" class="col-6 btn ngx-util-btn-icon ngx-util-btn-gray"
+        (click)="chatDelete()">
         <i class="fa fa-trash-o" aria-hidden="true" alt="eliminar conversacion"></i>
       </button>
-      <button *ngIf="!conversacion.bloqueo" type="button"
-        class="col-6 btn ngx-utilitario-btn-icon ngx-utilitario-btn-gray" (click)="bloquear()">
+      <button *ngIf="!chatDetail.lock" type="button"
+        class="col-6 btn ngx-util-btn-icon ngx-util-btn-gray" (click)="lock()">
         <i class="fa fa-ban" aria-hidden="true" alt="Bloquear conversacion"></i>
       </button>
-      <button *ngIf="validarEstadoBLoqueado(conversacion.bloqueo)" type="button"
-        class="col-6 btn ngx-utilitario-btn-icon ngx-utilitario-btn-gray" (click)="desbloquear()">
+      <button *ngIf="lookStateValidate(chatDetail.bloqueo)" type="button"
+        class="col-6 btn ngx-util-btn-icon ngx-util-btn-gray" (click)="lock()">
         <i class="fa fa-unlock" aria-hidden="true" alt="Bloquear conversacion"></i>
       </button>
     </div>
   </div>
   <div class="container-fluid">
     <div class="row ngx-utilitario-cuerpo-Chat">
-      <div class="col-12" *ngFor="let item of conversacion.mensajes; let i=index ">
+      <div class="col-12" *ngFor="let item of chatDetail.mensajes; let i=index ">
         <div class="container">
           <div class="row" *ngIf="lineaDia(item.fecha,i)">
             <div class="w-100 ngx-utilitario-chat-linea">
@@ -64,8 +64,8 @@
   </div>
   <div class="container-fluid">
     <div class="row">
-      <ngx-utilitario-chat-detail-add class="col-12 ngx-utilitario-chat-agregar"
-        (nuevoMensaje)="enviarMensaje($event)" [disabled]="conversacion.bloqueo"></ngx-utilitario-chat-detail-add>
+      <!-- <ngx-utilitario-chat-detail-add class="col-12 ngx-utilitario-chat-agregar"
+        (nuevoMensaje)="enviarMensaje($event)" [disabled]="chatDetail.bloqueo"></ngx-utilitario-chat-detail-add> -->
     </div>
   </div>
 </div>
