--- a/src/app/chat/chat/chat-detail/chat-detail.component.scss
+++ b/src/app/chat/chat/chat-detail/chat-detail.component.scss
@@ -1,4 +1,4 @@
-.ngx-utilitario-chat-linea {
+.ngx-util-chat-linea {
     position: relative;
     text-align: center;
     overflow: hidden;
@@ -7,7 +7,7 @@
     text-transform: capitalize;
     color: #9e9e9e;
 }
-.ngx-utilitario-chat-linea::before {
+.ngx-util-chat-linea::before {
     background: #e0e3e4;
     content: "";
     height: 1px;
@@ -17,7 +17,7 @@
     top: 50%;
     width: 100%;
 }
-.ngx-utilitario-chat-linea::after{
+.ngx-util-chat-linea::after{
     background: #e0e3e4;
     content: "";
     height: 1px;
@@ -28,7 +28,7 @@
     width: 100%;
 }
 
-.ngx-utilitario-chat-right{
+.ngx-util-chat-right{
     background: #e7b723;
     padding: 10px 15px;
     border-radius: .25rem;
@@ -40,7 +40,7 @@
     color: white;
     text-align: right;
 }
-.ngx-utilitario-chat-left{
+.ngx-util-chat-left{
     background: #fff;
 }
 
@@ -97,14 +97,13 @@
 //     margin-left: 15px;
 // }
 
-
-.ngx-utilitario-msj-enviado{
+.ngx-util-msj-enviado{
     color: green;   
 }
-.ngx-utilitario-msj-recibido{
+.ngx-util-msj-recibido{
     color: green;   
 }
-.ngx-utilitario-msj-leido{
+.ngx-util-msj-leido{
     color: green;   
 }
 
@@ -113,11 +112,11 @@
 }
 
 
-.ngx-utilitario-chat-agregar{
+.ngx-util-chat-agregar{
     position: relative;
 }
 
-.ngx-utilitario-cuerpo-Chat{
+.ngx-util-cuerpo-Chat{
     height: auto;
     min-height: 300px;
     max-height: 300px;
