--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="jumbotron">
+<!-- <div class="jumbotron">
   <h1 class="display-4">Welcome to ngx-utilitario-renatoclt!</h1>
   <p class="lead">Estos son los componentes que tienene esta libreria.</p>
   <p>Se usa bootsrap y fontawesome para estilo e iconos</p>
   <p>Se tiene la clases row-no-padding elimina los padding de los costados a las columnas automaticamente </p>
-</div>
+</div> -->
 <!-- <ngx-utilitario-chat-detail-add [disabled]="0"></ngx-utilitario-chat-detail-add> -->
 <!-- <ngx-utilitario-chat-detail></ngx-utilitario-chat-detail> -->
