--- a/src/app/chat/chat/chat-list-detail/chat-list-detail.component.html
+++ b/src/app/chat/chat/chat-list-detail/chat-list-detail.component.html
@@ -1,4 +1,4 @@
-<div class="content ngx-utilitario-chat-detalle" (click)="click()">
+<div id="div_detailMessages" class="content ngx-utilitario-chat-detalle" (click)="click()">
   <div class="row">
     <div class="col-2">
       <img class="img-fluid rounded-circle" alt="detalle.nombre" src={{detalle.img}} />
