--- a/src/app/chat/chat/chat-list/chat-list.component.html
+++ b/src/app/chat/chat/chat-list/chat-list.component.html
@@ -1,1 +1,1 @@
-<ngx-utilitario-chat-detalle *ngFor="let item of lista" [detalle]="item" (clickDetalle)="click($event)"></ngx-utilitario-chat-detalle>
+<ngx-utilitario-chat-list-detail *ngFor="let item of lista" [listDetail]="item" (clickDetail)="click($event)"></ngx-utilitario-chat-list-detail>
