chat list detail

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,4 @@
 </div>
 <!-- <ngx-utilitario-chat-detail-add [disabled]="0"></ngx-utilitario-chat-detail-add> -->
 <!-- <ngx-utilitario-chat-detail></ngx-utilitario-chat-detail> -->
+<ngx-utilitario-chat-list-detail></ngx-utilitario-chat-list-detail>
