--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,6 @@
 </div>
 <!-- <ngx-utilitario-chat-detail-add [disabled]="0"></ngx-utilitario-chat-detail-add> -->
 <!-- <ngx-utilitario-chat-detail></ngx-utilitario-chat-detail> -->
-<ngx-utilitario-chat-list-detail></ngx-utilitario-chat-list-detail>
+<!-- <ngx-utilitario-chat-list-detail></ngx-utilitario-chat-list-detail> -->
+<ngx-utilitario-chat-search></ngx-utilitario-chat-search>
+<!-- <ngx-utilitario-chat-list></ngx-utilitario-chat-list> -->
