--- a/src/app/forms/input/input.component.html
+++ b/src/app/forms/input/input.component.html
@@ -4,9 +4,9 @@
       {{label}}
     </mat-label>
     <input matInput >
+    <i matSuffix>mode_edit</i>
     <mat-hint *ngIf="validationHint()">
       {{hint}}
     </mat-hint>
   </mat-form-field>
 </div>
-<!-- <div style="background: red; height:42px"></div> -->
