cambio en el estilo de chat

--- a/src/app/chat/chat/chat-detail/chat-detail.component.html
+++ b/src/app/chat/chat/chat-detail/chat-detail.component.html
@@ -7,7 +7,7 @@
   <!--Cabecera del chat-->
   <div class="row ngx-util-detail-head">
     <div class="img-fluid detail-head-img">
-      <img class="img-fluid rounded-circle img-height-3-7" alt="chatDetail.name"
+      <img class="img-fluid rounded-circle img-profile-chat-detail" alt="chatDetail.name"
         src="{{imageValidate(chatDetail.img)}}" />
     </div>
     <div class="detail-head-name">
