--- a/src/app/chat/chat/chat-search/chat-search.component.html
+++ b/src/app/chat/chat/chat-search/chat-search.component.html
@@ -1,3 +1,4 @@
 <div class="content ngx-util-search">
-  <ngx-utilitario-input  class="w-100 ngx-util-search-input" label="busqueda"></ngx-utilitario-input>
+  <ngx-utilitario-input class="w-100 ngx-util-search-input" label="busqueda" iconMatSuffix="fa fa-search"
+    [parent]="searchForm" name="search" (value)="changeValue($event)"></ngx-utilitario-input>
 </div>
