--- a/src/app/chat/chat/chat-list/chat-list.component.html
+++ b/src/app/chat/chat/chat-list/chat-list.component.html
@@ -1,1 +1,3 @@
-<ngx-utilitario-chat-list-detail *ngFor="let item of list" [listDetail]="item" (clickDetail)="click($event)"></ngx-utilitario-chat-list-detail>
+<ngx-utilitario-perfect-scroll>
+    <ngx-utilitario-chat-list-detail *ngFor="let item of list" [listDetail]="item" (clickDetail)="click($event)"></ngx-utilitario-chat-list-detail>
+</ngx-utilitario-perfect-scroll>
