--- a/src/styles_custom.scss
+++ b/src/styles_custom.scss
@@ -9,6 +9,10 @@
     padding-left: 0 !important;
     padding-right: 0 !important;
 }
+.no-margin {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+}
 
 .ngx-utilitario-modal-background {
     animation-duration: 4s;
