--- a/src/app/chat/chat/chat-detail/chat-detail.component.scss
+++ b/src/app/chat/chat/chat-detail/chat-detail.component.scss
@@ -4,29 +4,39 @@
     // position: relative; 
     width: 100%;
     height: 100%;
+    border: 0.0625rem solid #e0e3e4;
 }
 .ngx-util-detail-head{
     display: flex;
-    height: 64px;
+    padding: 0.62rem 0.93rem;
+    height: 4.37rem;
+    border-bottom: 0.0625rem solid #e0e3e4;
 }
 .ngx-util-detail-messages{
     flex-grow : 1;
+    overflow: hidden;
+}
+
+.ngx-util-detail-messages-show{
+    flex-flow: column;
+    display: flow-root;
+    height: -webkit-fill-available;
 }
 .ngx-util-chat-linea {
     position: relative;
     text-align: center;
     overflow: hidden;
-    font-size: 14px;
-    margin: 15px 50px;
+    font-size: 0.87rem;
+    margin: 0.93rem 3.125rem;
     text-transform: capitalize;
     color: #9e9e9e;
 }
 .ngx-util-chat-linea::before {
     background: #e0e3e4;
     content: "";
-    height: 1px;
+    height: 0.0625rem;
     right: 50%;
-    margin-right: 28px;
+    margin-right: 1.75rem;
     position: absolute;
     top: 50%;
     width: 100%;
@@ -34,9 +44,9 @@
 .ngx-util-chat-linea::after{
     background: #e0e3e4;
     content: "";
-    height: 1px;
+    height: 0.0625rem;
     left: 50%;
-    margin-left: 28px;
+    margin-left: 1.75rem;
     position: absolute;
     top: 50%;
     width: 100%;
@@ -44,11 +54,11 @@
 
 .ngx-util-chat-right{
     background: #e7b723;
-    padding: 10px 15px;
+    padding: 0.625rem 0.9375rem;
     border-radius: .25rem;
     display: inline-block;
     position: relative;
-    margin-bottom: 5px;
+    margin-bottom: 0.3125rem;
     word-wrap: break-word;
     max-width: 60%;
     color: white;
@@ -75,14 +85,14 @@
 .arrow_box:after {
 	border-color: rgba(136, 183, 213, 0);
 	border-left-color: #e7b723;
-	border-width: 7px;
-	margin-top: 0px;
+	border-width: 0.4375rem;
+	margin-top: 0;
 }
 .arrow_box:before {
 	border-color: rgba(194, 225, 245, 0);
 	border-left-color: #e7b723;
-	border-width: 7px;
-	margin-top: 0px;
+	border-width: 0.4375rem;
+	margin-top: 0;
 }
 
 
@@ -103,12 +113,12 @@
 
 // .ngx-utilitario-chat-linea > span:before {
 //     right: 100%;
-//     margin-right: 15px;
+//     margin-right: 0.9375‬rem;
 // }
 
 // .ngx-utilitario-chat-linea > span:after {
 //     left: 100%;
-//     margin-left: 15px;
+//     margin-left: 0.9375‬rem;
 // }
 
 .ngx-util-msj-enviado{
@@ -131,10 +141,9 @@
 }
 
 .ngx-util-cuerpo-Chat{
-    height: auto;
-    min-height: 300px;
-    max-height: 300px;
-    overflow-y: auto;
+    display: flex;
+    flex-flow: column;
+    height: 100%;
 }
 
 .detail-head-img{
