--- a/src/app/chat/chat/chat.component.html
+++ b/src/app/chat/chat/chat.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid row-no-padding ngx-utilitario-chat" style="height: 400px">
   <div class="row">
-    <div class="col-4 ngx-utilitario-chat-list">
+    <div class="col-md-4 col-sm-12 ngx-utilitario-chat-list">
       <header class="ngx-util-list-header">
         Chats
         <span class="fa fa-pencil-square-o"></span>
@@ -9,11 +9,8 @@
       <ngx-utilitario-chat-list class="ngx-util-list-detail" [list]="lista" (clickList)="listDetailClick($event)">
       </ngx-utilitario-chat-list>
     </div>
-    <div class="col-8">
+    <div class="col-md-8 col-sm-12">
       <ngx-utilitario-chat-detail [chatDetail]="chatDetail"></ngx-utilitario-chat-detail>
-      <!-- <ngx-utilitario-chat-conversacion  (nuevoMensaje)="enviarMensaje($event)"
-        (eliminarMensajes)="eliminarMensajes()" (bloquearConversacion)="bloquearChat($event)">
-      </ngx-utilitario-chat-conversacion> -->
     </div>
   </div>
 </div>
